infra: configurar usuario laravel para MySQL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,42 @@
-version: "3.9"
-
 services:
   api:
     image: ghcr.io/juanraniqueo/transformacion_digital:latest
     container_name: api-ci-cd
     restart: unless-stopped
+    depends_on:
+      - db
     ports:
       - "8000:8000"
     environment:
       APP_ENV: production
       APP_DEBUG: "false"
-      APP_URL: http://54.221.143.59:8000
+      APP_URL: "http://54.221.143.59:8000" # <-- cambia si tu IP cambia
+      # Usa la misma APP_KEY que usas en local
+      APP_KEY: "base64:r06O7a4jKtWqrWaZ6/sk6wHssnAxyS0ngqxsqOyRDLo="
+
+      # Config DB para Laravel
       DB_CONNECTION: mysql
       DB_HOST: db
       DB_PORT: 3306
-      DB_DATABASE: api_cicd
-      DB_USERNAME: api_user
-      DB_PASSWORD: api_pass
-    depends_on:
-      - db
+      DB_DATABASE: laravel
+      DB_USERNAME: laravel
+      DB_PASSWORD: laravel
 
   db:
     image: mysql:8
     container_name: api-ci-cd-db
     restart: unless-stopped
     environment:
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: laravel
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: api_cicd
-      MYSQL_USER: api_user
-      MYSQL_PASSWORD: api_pass
+      # permitir que root se conecte desde otros hosts (por si acaso)
+      MYSQL_ROOT_HOST: "%"
     volumes:
-      - db_data:/var/lib/mysql
+      - db-data:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
 volumes:
-  db_data:
+  db-data:
